# looking_glass

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  start.sh  stop.sh
agent/: .dockerignore  Dockerfile  go.mod  go.sum
deploy/: .env.example  deploy-server.sh  docker-compose.agent.yml  docker-compose.agent2.yml  docker-compose.prod.yml  (+1 more)
docs/: DEPLOY.md  (+2 more)
server/: .dockerignore  Dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_init_users_agents.py  0002_tasks_results.py  0003_task_group_id.py  0004_audit_events.py  0005_agent_display_name_description.py  0006_public_targets.py  0007_agent_geo.py  0008_schedules.py  0009_availability_presets.py
server/app/: main.py
server/app/api/: agents.py  audit.py  auth.py  availability.py  availability_presets.py  health.py  public.py  schedules.py  stats.py  targets.py  tasks.py  tools.py  users.py
server/app/core/: config.py  db.py  deps.py  metrics.py  pubsub.py  rate_limit.py  rbac.py  security.py
server/app/models/: agent.py  audit.py  availability_preset.py  public_target.py  result.py  schedule.py  task.py  user.py
server/app/schemas/: agent.py  auth.py  availability.py  availability_preset.py  public_lookup.py  public_target.py  schedule.py  task.py  trends.py
server/app/services/: audit.py  bootstrap.py  geoip.py  scheduler.py  task_router.py  trends.py  watchdog.py
server/app/validators/: targets.py  task_params.py
server/app/ws/: task_live.py
server/tests/: test_public_lookup_options.py  test_rate_limit.py  test_targets_validator.py  test_task_params.py
(+144 files in other folders)
